# Mastodon-realtime-analytics

./: .env.example  .gitignore  README.md  consumer_main.py  pyproject.toml  run_flink_analysis.py  terminal_consumer.py  terminal_stream.py
docs/: Elasticsearch_installation.md  Flink_installation.md  Kafka_installation  Kafka_installation.md  Kibana_installation.md  project-structure.md
src/Mastodon_stream/: __init__.py
src/Mastodon_stream/consumer/: __init__.py  elasticsearch_writer.py  hdfs_writer.py  kafka_consumer.py
src/Mastodon_stream/flink_analysis/: __init__.py  sql_analyzer.py  stream_analyzer.py
src/Mastodon_stream/producer/: kafka_producer.py  mastodon_client.py  stream_handler.py
tests/: consumer_main.py  es_consumer.py  run_flink_analysis.py  terminal_stream.py  test.py  test_flink_analyzer.py  test_pipelines.py
