[project]
name = "big-data-project"
version = "0.1.0"
description = "Mastodon streaming pipeline to Kafka"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.6.0",
    "python-dotenv>=1.0.0",
    "mastodon-py>=1.8.0",
    "flask>=3.1.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
